# abio

./: Procfile  README.md  index.py  pyproject.toml  requirements.txt  setup.sh
abio/: animation.py
abio/cellular_automata/: __init__.py  dim1.py  dim2.py
noo/: animation.py
noo/cellular_automata/: dim1.py  dim2.py
notebooks/: 20201002 - Experiments on 1D cellular automata with Pytorch.ipynb  20201003 - Experiments on 2D cellular automata with Pytorch.ipynb
