[tool.poetry]
name = "abio"
version = "0.1.0"
description = "Cellular Automata on steroids"
authors = ["Theo Alves Da Costa <theo.alves.da.costa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
imageio = "^2.9.0"
ffmpeg = "^1.4"
ipython = "^7.22.0"
jupyter = "^1.0.0"
Pillow = "^8.2.0"
streamlit = "^0.79.0"
opencv-python-headless = "^4.5.1"
torch = "^1.8.1"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
